--- a/less/_grid.less
+++ b/less/_grid.less
@@ -26,12 +26,8 @@
 *   <div class="col-xs-8 col-xs-offset-8"><p>8 offset by 8</p></div>
 * </div>
 * <div class="row no-gutters">
-*   <div class="col-xs-4"><p>4</p></div>
-*   <div class="col-xs-4"><p>4</p></div>
-*   <div class="col-xs-4"><p>4</p></div>
-*   <div class="col-xs-4"><p>4</p></div>
-*   <div class="col-xs-4"><p>4</p></div>
-*   <div class="col-xs-4"><p>4</p></div>
+*   <div class="col-sm-12"><p>12</p></div>
+*   <div class="col-sm-12"><p>12</p></div>
 * </div>
 * <div class="row no-space">
 *   <div class="col-sm-12"><p>12</p></div>
@@ -66,6 +62,28 @@
     content: "";
     display: table;
     clear: both;
+  }
+}
+
+// Add spacing when columns are collapsed.
+.row:not(.no-gutters) {
+  [class^="col-sm-"],
+  [class*=" col-sm-"],
+  [class^="col-md-"],
+  [class*=" col-md-"],
+  [class^="col-lg-"],
+  [class*=" col-lg-"] {
+    & + [class^="col-sm-"],
+    & + [class*=" col-sm-"]
+    & + [class^="col-md-"],
+    & + [class*=" col-md-"]
+    & + [class^="col-lg-"],
+    & + [class*=" col-lg-"] {
+      margin-top: 1em;
+      @media(min-width: @screen-sm-min) {
+        margin-top: 0;
+      }
+    }
   }
 }
 
